--- a/025.Image Gallery 2.5D/index.html
+++ b/025.Image Gallery 2.5D/index.html
@@ -4,57 +4,58 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Rotating Gallery</title>
     <link rel="stylesheet" href="style.css" />
+    <title>Rotating Gallery</title>
   </head>
   <body>
-    <div class="image-container">
-      <span style="--i: 1">
-        <img
-          src="https://images.unsplash.com/photo-1477884213360-7e9d7dcc1e48?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTN8fGRvZ3xlbnwwfHwwfHw%3D&auto=format&fit=crop&w=600&q=60"
-        />
-      </span>
-      <span style="--i: 2">
-        <img
-          src="https://images.unsplash.com/photo-1484399172022-72a90b12e3c1?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTN8fGdpcmx8ZW58MHx8MHx8&auto=format&fit=crop&w=600&q=60"
-        />
-      </span>
-      <span style="--i: 3">
-        <img
-          src="https://images.unsplash.com/photo-1581704906775-891dd5207444?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTR8fGJveXxlbnwwfHwwfHw%3D&auto=format&fit=crop&w=600&q=60"
-        />
-      </span>
-      <span style="--i: 4">
-        <img
-          src="https://images.unsplash.com/photo-1441974231531-c6227db76b6e?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8N3x8bmF0dXJlfGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=600&q=60"
-        />
-      </span>
-      <span style="--i: 5">
-        <img
-          src="https://images.unsplash.com/photo-1426604966848-d7adac402bff?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8OXx8bmF0dXJlfGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=600&q=60"
-        />
-      </span>
-      <span style="--i: 6">
-        <img
-          src="https://images.unsplash.com/photo-1548036328-c9fa89d128fa?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8N3x8YmFnfGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=600&q=60"
-        />
-      </span>
-      <span style="--i: 7">
-        <img
-          src="https://images.unsplash.com/photo-1544716278-ca5e3f4abd8c?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTB8fGJvb2t8ZW58MHx8MHx8&auto=format&fit=crop&w=600&q=60"
-        />
-      </span>
-      <span style="--i: 8">
-        <img
-          src="https://images.unsplash.com/photo-1582142407894-ec85a1260a46?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTJ8fGdsYXNzZXN8ZW58MHx8MHx8&auto=format&fit=crop&w=600&q=60"
-        />
-      </span>
-    </div>
+    <section class="img__container">
+     <img
+  class="image"
+  style="--i: 1;"
+  src="https://images.pexels.com/photos/58597/pexels-photo-58597.jpeg?auto=compress&cs=tinysrgb&w=600"
+/>
+<img
+  class="image"
+  style="--i: 2;"
+  src="https://images.pexels.com/photos/1018478/pexels-photo-1018478.jpeg?auto=compress&cs=tinysrgb&w=600"
+/>
+<img
+  class="image"
+  style="--i: 3;"
+  src="https://images.pexels.com/photos/2796627/pexels-photo-2796627.jpeg?auto=compress&cs=tinysrgb&w=600"
+/>
+<img
+  class="image"
+  style="--i: 4;"
+  src="https://images.pexels.com/photos/2602490/pexels-photo-2602490.jpeg?auto=compress&cs=tinysrgb&w=600"
+/>
+<img
+  class="image"
+  style="--i: 5;"
+  src="https://images.pexels.com/photos/3180617/pexels-photo-3180617.jpeg?auto=compress&cs=tinysrgb&w=600"
+/>
+<img
+  class="image"
+  style="--i: 6;"
+  src="https://images.pexels.com/photos/3388217/pexels-photo-3388217.jpeg?auto=compress&cs=tinysrgb&w=600"
+/>
+<img
+  class="image"
+  style="--i: 7;"
+  src="https://images.pexels.com/photos/1102398/pexels-photo-1102398.jpeg?auto=compress&cs=tinysrgb&w=600"
+/>
+<img
+  class="image"
+  style="--i: 8;"
+  src="https://images.pexels.com/photos/1093946/pexels-photo-1093946.jpeg?auto=compress&cs=tinysrgb&w=600"
+/>
 
-    <div class="btn-container">
-      <button class="btn" id="prev">Prev</button>
-      <button class="btn" id="next">Next</button>
-    </div>
+    </section>
+
+    <section class="btn__container">
+      <button class="btn" id="btn__prev">Prev</button>
+      <button class="btn" id="btn__next">Next</button>
+    </section>
 
     <script src="script.js"></script>
   </body>
