feat: add tabbed interface

--- a/026.Simple Tab/index.html
+++ b/026.Simple Tab/index.html
@@ -1,1 +1,48 @@
-
+<!DOCTYPE html>
+<html lang="en">
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
+			rel="stylesheet"
+		/>
+		<link rel="stylesheet" href="style.css" />
+		<title>Day #26: Tab</title>
+	</head>
+	<body>
+	<main class="tabs">
+  <ul class="tab">
+    <li>
+      <input name="tab" type="radio" id="tab-1" checked="checked" />
+      <label for="tab-1">Xôi Mặn</label>
+      <article class="tab__content">
+        <h1>Xôi Mặn</h1>
+        <p>"Xôi Mặn" is a Vietnamese dish meaning "savory sticky rice"</p>
+        <p>A plate of steamed sticky rice topped with various savory ingredients...</p>
+      </article>
+    </li>
+    <li>
+      <input name="tab" type="radio" id="tab-2" />
+      <label for="tab-2">Bún bò Nam Bộ</label>
+      <article class="tab__content">
+        <h1>Bún bò Nam Bộ</h1>
+        <p>a Vietnamese noodle salad made with rice vermicelli...</p>
+        <p>It's a popular street food in Vietnam...</p>
+      </article>
+    </li>
+    <li>
+      <input name="tab" type="radio" id="tab-3" />
+      <label for="tab-3">Bánh Mì Patê</label>
+      <article class="tab__content">
+        <h1>Bánh Mì Patê</h1>
+        <p>a spread of pâté, a type of meat paste...</p>
+        <p>The pâté adds a rich flavor...</p>
+      </article>
+    </li>
+  </ul>
+</main>
+	</body>
+</html>
