fix: enhance tab content descriptions and improve layout styles

--- a/026.Simple Tab/index.html
+++ b/026.Simple Tab/index.html
@@ -29,8 +29,7 @@
       <label for="tab-2">Bún bò Nam Bộ</label>
       <article class="tab__content">
         <h1>Bún bò Nam Bộ</h1>
-        <p>a Vietnamese noodle salad made with rice vermicelli...</p>
-        <p>It's a popular street food in Vietnam...</p>
+        <p>a Vietnamese noodle salad made with rice vermicelli, beef, herbs, vegetables, fried onions, and peanuts</p>
       </article>
     </li>
     <li>
@@ -38,8 +37,7 @@
       <label for="tab-3">Bánh Mì Patê</label>
       <article class="tab__content">
         <h1>Bánh Mì Patê</h1>
-        <p>a spread of pâté, a type of meat paste...</p>
-        <p>The pâté adds a rich flavor...</p>
+        <p>Commonly made from pig's liver and a mixture of meat, vegetables and spices, paté keeps the Bánh Mì from getting too dry.</p>
       </article>
     </li>
   </ul>
