fix: update pagination section ID and enhance pagination logic

--- a/027.Simple Pagination/index.html
+++ b/027.Simple Pagination/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <section id="pagination"></section>
+    <section id="pagination__section"></section>
 
    <script type="module" src="script.js"></script>
 </body>
