fix: improve accessibility by refining ARIA attributes in progress steps

--- a/035.Simple Progress Steps/index.html
+++ b/035.Simple Progress Steps/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    		<link rel="preconnect" href="https://fonts.googleapis.com" />
+    	<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link
 			href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
@@ -14,13 +14,13 @@
 </head>
 <body>
     <main>
-        <nav class="wrapper" aria-label="Progress">
-            <ul class="progress-wrapper" role="progressbar" aria-valuemin="1" aria-valuemax="4" aria-valuenow="1">
+        <nav class="wrapper">
+            <ul class="progress-wrapper" role="progressbar" >
                 <li id="progress-bar"></li>
-                <li class="step active" role="status" aria-label="Step 1 of 4 (Current)">1</li>
-                <li class="step" role="status" aria-label="Step 2 of 4">2</li>
-                <li class="step" role="status" aria-label="Step 3 of 4">3</li>
-                <li class="step" role="status" aria-label="Step 4 of 4">4</li>
+                <li class="step active" role="status" >1</li>
+                <li class="step" role="status">2</li>
+                <li class="step" role="status">3</li>
+                <li class="step" role="status">4</li>
             </ul>
             <section class="button-group">
                 <button class="btn" id="step-prev" aria-label="Previous step" disabled>Back</button>
