fix: remove unnecessary ARIA attributes from navigation buttons

--- a/035.Simple Progress Steps/index.html
+++ b/035.Simple Progress Steps/index.html
@@ -23,8 +23,8 @@
                 <li class="step" role="status">4</li>
             </ul>
             <section class="button-group">
-                <button class="btn" id="step-prev" aria-label="Previous step" disabled>Back</button>
-                <button class="btn" id="step-next" aria-label="Next step">Next</button>
+                <button class="btn" id="step-prev"  disabled>Back</button>
+                <button class="btn" id="step-next">Next</button>
             </section>
         </nav>
     </main>
