feat: add HTML structure and CSS styles for Video Overlay feature

--- a/033.Text Overlay Video/index.html
+++ b/033.Text Overlay Video/index.html
@@ -1,10 +1,30 @@
+<!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Day #33: Video Overlay</title>
-</head>
-<body>
-  
-</body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+			rel="stylesheet"
+		/>
+		<title>Day #33: Video Overlay</title>
+		<link rel="stylesheet" href="style.css" />
+	</head>
+	<body>
+		<section class="overlay__video">
+			<video autoplay muted>
+				<source
+					src="https://videos.pexels.com/video-files/30289031/12984241_2560_1440_30fps.mp4"
+					type="video/mp4"
+				/>
+			</video>
+			<article class="overlay__text">
+				<h1>Sai Gon</h1>
+				<p>Aerial View of Sai Gon City at Night</p>
+			</article>
+		</section>
+
+	</body>
 </html>
