feat: update video element to loop and modify overlay text for consistency

--- a/033.Text Overlay Video/index.html
+++ b/033.Text Overlay Video/index.html
@@ -14,15 +14,14 @@
 	</head>
 	<body>
 		<section class="overlay__video">
-			<video autoplay muted>
+			<video autoplay muted loop>
 				<source
 					src="https://videos.pexels.com/video-files/30289031/12984241_2560_1440_30fps.mp4"
 					type="video/mp4"
 				/>
 			</video>
 			<article class="overlay__text">
-				<h1>Sai Gon</h1>
-				<p>Aerial View of Sai Gon City at Night</p>
+				<h1>/Saigon/</h1>
 			</article>
 		</section>
 
