refactor: rename overlay class for consistency in HTML and CSS

--- a/033.Text Overlay Video/index.html
+++ b/033.Text Overlay Video/index.html
@@ -13,7 +13,7 @@
 		<link rel="stylesheet" href="style.css" />
 	</head>
 	<body>
-		<section class="overlay__video">
+		<section class="overlay">
 			<video autoplay muted loop>
 				<source
 					src="https://videos.pexels.com/video-files/30289031/12984241_2560_1440_30fps.mp4"
