chore: update Image Hover Zoom In feature with new image sources and enhanced styles

--- a/034.ImageHover Zoom In/index.html
+++ b/034.ImageHover Zoom In/index.html
@@ -7,19 +7,23 @@
 		<link rel="stylesheet" href="style.css" />
 	</head>
 	<body>
-	<main class="container">
-  <div>
-    <img src="https://images.unsplash.com/photo-1534670007418-fbb7f6cf32c3?q=80&w=1588&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D">
-  </div>
-  <div>
-    <img src="https://images.unsplash.com/photo-1454793147212-9e7e57e89a4f?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTl8fGltYWdlcyUyMHdpdGglMjBiaWclMjBzaXplfGVufDB8fDB8fHww">
-  </div>
-  <div>
-    <img src="https://images.unsplash.com/photo-1654327091751-1c10d020a232?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mjh8fGltYWdlcyUyMHdpdGglMjBiaWclMjBzaXplfGVufDB8fDB8fHww">
-  </div>
-  <div>
-    <img src="https://images.unsplash.com/photo-1544979590-37e9b47eb705?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8aW1hZ2VzJTIwd2l0aCUyMGJpZyUyMHNpemV8ZW58MHx8MHx8fDA%3D">
-  </div>
+	<main>
+  <figure>
+    <img src="https://images.pexels.com/photos/3155276/pexels-photo-3155276.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2">
+  </figure>
+  <figure>
+    <img src="https://images.pexels.com/photos/1660996/pexels-photo-1660996.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2">
+  </figure>
+  <figure>
+    <img src="https://images.pexels.com/photos/1018478/pexels-photo-1018478.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2">
+  </figure>
+  <figure>
+    <img src="https://images.pexels.com/photos/3180617/pexels-photo-3180617.jpeg?auto=compress&cs=tinysrgb&w=600">
+  </figure>
+  <figure>
+    <img src="https://images.pexels.com/photos/3388217/pexels-photo-3388217.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2">
+  </figure>
+
 </main>
 
 
