--- a/014.Simple System Theme/index.html
+++ b/014.Simple System Theme/index.html
@@ -8,7 +8,7 @@
 	</head>
 	<body>
 		<section class="theme__toggle">
-			<button name="theme" class="theme__toggle--button">
+			<button name="theme" class="theme__toggle--button" type="checkbox">
 				<svg
           class="theme__toggle--light"
 					width="16"
@@ -41,5 +41,6 @@
 				</svg>
 			</button>
 		</section>
+		<script type="module" src="script.js"></script>
 	</body>
 </html>
