feat: update layout and content for Underneath Footer example

--- a/011.Underneath Footer/index.html
+++ b/011.Underneath Footer/index.html
@@ -7,49 +7,12 @@
     <link rel="stylesheet" href="style.css">
 	</head>
 	<body>
-		<main class="main__container">
-			<h2 class="">Scoll Down</h2>
+		<main>
+			<h2>Scoll Down</h2>
 		</main>
 		<footer>
-			<p>
-				Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore ex illo
-				totam minima in explicabo laboriosam harum voluptatum tenetur quia
-				dolorum quibusdam earum incidunt odio expedita atque ipsum, voluptatem
-				ullam pariatur accusantium officia vel quae vero ad. Sunt commodi
-				numquam in, dolor reprehenderit error dignissimos magnam quaerat
-				provident neque soluta tempora quis eligendi similique, labore
-				asperiores placeat veritatis, cum dolorum! Sed consequuntur et beatae
-				harum ab soluta ducimus iusto sequi vel quo temporibus debitis
-				perspiciatis, laborum praesentium ipsa velit, quod aut doloremque odit!
-				Nulla quam maxime ab fuga facilis itaque delectus, quidem adipisci
-				aspernatur sint ad et, voluptatibus dignissimos accusamus?
-			</p>
-			<p>
-				Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore ex illo
-				totam minima in explicabo laboriosam harum voluptatum tenetur quia
-				dolorum quibusdam earum incidunt odio expedita atque ipsum, voluptatem
-				ullam pariatur accusantium officia vel quae vero ad. Sunt commodi
-				numquam in, dolor reprehenderit error dignissimos magnam quaerat
-				provident neque soluta tempora quis eligendi similique, labore
-				asperiores placeat veritatis, cum dolorum! Sed consequuntur et beatae
-				harum ab soluta ducimus iusto sequi vel quo temporibus debitis
-				perspiciatis, laborum praesentium ipsa velit, quod aut doloremque odit!
-				Nulla quam maxime ab fuga facilis itaque delectus, quidem adipisci
-				aspernatur sint ad et, voluptatibus dignissimos accusamus?
-			</p>
-			<p>
-				Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore ex illo
-				totam minima in explicabo laboriosam harum voluptatum tenetur quia
-				dolorum quibusdam earum incidunt odio expedita atque ipsum, voluptatem
-				ullam pariatur accusantium officia vel quae vero ad. Sunt commodi
-				numquam in, dolor reprehenderit error dignissimos magnam quaerat
-				provident neque soluta tempora quis eligendi similique, labore
-				asperiores placeat veritatis, cum dolorum! Sed consequuntur et beatae
-				harum ab soluta ducimus iusto sequi vel quo temporibus debitis
-				perspiciatis, laborum praesentium ipsa velit, quod aut doloremque odit!
-				Nulla quam maxime ab fuga facilis itaque delectus, quidem adipisci
-				aspernatur sint ad et, voluptatibus dignissimos accusamus?
-			</p>
-		</footer>
+			<h2>Sticky Footer</h2>
+			<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Asperiores vitae, amet suscipit accusamus alias officiis ea debitis incidunt ab ullam perspiciatis nobis, ipsam voluptatum assumenda, distinctio recusandae ratione nisi nemo expedita. Labore rem, cum quasi delectus exercitationem quisquam iste nam quo quis, nemo error quae saepe? Cupiditate modi, omnis accusantium aliquid repellendus quae unde amet recusandae sequi aspernatur tempore nemo quaerat nisi consequatur dignissimos nihil, sed, pariatur ea ducimus obcaecati consectetur? Delectus, id! Delectus obcaecati perspiciatis explicabo eveniet magni molestias sed animi illo laboriosam, fuga aut totam eum ipsa blanditiis officia iusto ullam modi saepe accusamus ipsum debitis esse reprehenderit deserunt! Animi, aliquam eum nemo voluptas neque quisquam sit ut accusantium quasi ea saepe aspernatur sequi sint sed accusamus. Ratione maxime voluptatum earum at alias ipsam error quos praesentium, officia quidem iste enim perspiciatis amet tenetur, nisi dolore dolor distinctio reprehenderit, quia neque quae obcaecati tempore. Nemo commodi nesciunt ipsa rem consectetur dolorum quae accusamus, odit voluptas officia fuga aspernatur, repellat repellendus deserunt aliquam cupiditate magni nostrum. Doloribus animi aliquid labore dicta eum vel necessitatibus quam ratione perspiciatis ipsa accusantium, quidem quo quos. Quas doloremque reiciendis sapiente sed ea laboriosam porro placeat quam voluptate et facilis fugit, sit, distinctio laudantium? Totam deserunt itaque tempore ex natus adipisci dolorum autem libero enim accusantium optio voluptates quasi iusto aperiam, omnis inventore dolorem, ea cum alias! Neque id obcaecati quos, rerum consequatur itaque vitae inventore odit laboriosam commodi explicabo sunt eos! Voluptatum cumque perspiciatis libero facere, minus voluptas ea animi esse obcaecati asperiores mollitia quod tempora, quae doloremque sed magni architecto soluta delectus quis possimus eveniet nesciunt corrupti odit. Numquam, minima facilis excepturi dolorem repellat ab fugiat expedita amet quasi ad, distinctio mollitia placeat! Eum quisquam sapiente delectus tenetur sint tempore amet, maiores iure pariatur modi recusandae labore, adipisci voluptatem? Maxime, voluptatibus vel.</p>
+			</footer>
 	</body>
 </html>
