feat: enhance accessibility by adding tabindex to content and improving focus styles

--- a/050.Component Selection Highlight/index.html
+++ b/050.Component Selection Highlight/index.html
@@ -16,7 +16,7 @@
     <main>
       <section class="component__select">
         <span class="component__select--tooltip">snake</span>
-        <p class="component__select--content">Hover me 🐍</p>
+        <p class="component__select--content" tabindex="0">Hover me 🐍</p>
       </section>
     </main>
   </body>
