fix: gradient text day 22 by the missing file by convert the repo

--- a/022.Gradient Text/index.html
+++ b/022.Gradient Text/index.html
@@ -3,17 +3,21 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+      rel="stylesheet"
+    />
   <title>Day #22: Gradient Backgound</title>
+   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <main>
-    <section class="gradient__box">
-      <p class="eyebrow__text">
-        
-      </p>
-      <h1></h1>
-    </section>
+      <h1 class="gradient__text">
+        Gradient Text
+      </h1>
+
   </main>
 </body>
 </html>
