feat: update Customize Radio component to use correct input type and improve styling

--- a/062.Customize Radio/index.html
+++ b/062.Customize Radio/index.html
@@ -17,24 +17,24 @@
     <h1>Customize Ratio</h1>
     <form action="">
       <label class="form__control">
-        <input type="ratio" name="ratio" />
+        <input type="radio" name="radio" />
         Default
       </label>
 
       <label class="form__control">
-        <input type="ratio" name="ratio-checked" checked />
+        <input type="radio" name="radio-checked" checked />
         Checked
       </label>
 
       <label class="form__control form__control--disabled">
-        <input type="ratio" name="ratio-disabled" disabled />
+        <input type="radio" name="radio-disabled" disabled />
         Disabled
       </label>
 
       <label class="form__control form__control--disabled">
         <input
-          type="ratio"
-          name="ratio-disabled-checked"
+          type="radio"
+          name="radio-disabled-checked"
           checked
           disabled
         />
