feat: add description paragraph and style adjustments for card content

--- a/066.Simple Card With Transition/index.html
+++ b/066.Simple Card With Transition/index.html
@@ -9,6 +9,7 @@
   <body>
     <main class="card__container">
       <h1>Vietnamese Cuisine</h1>
+      <p>Vietnamese cuisine encompasses the foods and beverages originated from Vietnam</p>
       <div class="card__container--content">
         <article class="card__nested">
           <img
