feat: add Button Keyboard Style component with HTML and CSS files

--- a/066.Simple Card With Transition/index.html
+++ b/066.Simple Card With Transition/index.html
@@ -5,11 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Day #066: Simple Card With Transition</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <main class="card__container">
       <h1>Vietnamese Cuisine</h1>
-      <p>Vietnamese cuisine encompasses the foods and beverages originated from Vietnam</p>
+      <p>
+        Vietnamese cuisine encompasses the foods and beverages originated from
+        Vietnam
+      </p>
       <div class="card__container--content">
         <article class="card__nested">
           <img
