feat: enhance button styling and structure for keyboard style component

--- a/067.Button Keyboard Style/index.html
+++ b/067.Button Keyboard Style/index.html
@@ -13,8 +13,8 @@
     />
   </head>
   <body>
-    <button>
-      <span class="Keyboard--style"> ctrl </span>
+    <button class="keyboard__button">
+      <span class="keyboard__button--text"> CTRL </span>
     </button>
   </body>
 </html>
