feat: update project templates and improve HTML structure for new projects

--- a/067.Button Keyboard Style/index.html
+++ b/067.Button Keyboard Style/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Day #067: Button 2 5d Keyboard Style</title>
+    <title>Day #067: Button Keyboard Style</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
