--- a/068.Directionally Aware Button/index.html
+++ b/068.Directionally Aware Button/index.html
@@ -11,8 +11,9 @@
       href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
       rel="stylesheet"
     />
-  
 </head>
 <body>
+  <button class="ripped" href="#">Click Me</button>
+  <script src="script.js"></script>
 </body>
 </html>
