--- a/071.Simple Faqs Section/index.html
+++ b/071.Simple Faqs Section/index.html
@@ -1,19 +1,142 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Day #071: Simple Faqs Section</title>
-  <link rel="stylesheet" href="style.css">
-      <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Day #071: Simple Faqs Section</title>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
       rel="stylesheet"
     />
-  
-</head>
-<body>
+  </head>
+  <body>
+    <section class="faq">
+      <section class="faq__header">
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          fill="none"
+          viewBox="0 0 40 41"
+          class="faq__icon"
+        >
+          <path
+            fill="currentColor"
+            d="M37.5 20.5a2.467 2.467 0 0 1-1.64 2.344l-9.913 3.604-3.603 9.911a2.5 2.5 0 0 1-4.688 0l-3.604-9.922-9.911-3.593a2.5 2.5 0 0 1 0-4.688l9.921-3.604 3.594-9.911a2.5 2.5 0 0 1 4.688 0l3.604 9.921 9.911 3.594A2.467 2.467 0 0 1 37.5 20.5Z"
+          ></path>
+        </svg>
+        <h1>Bún Bò FAQs</h1>
+      </section>
 
-</body>
+      <section class="faq__item">
+        <input type="radio" id="faq1" name="faq__accordion" checked />
+        <label class="faq__question" for="faq1">What is Bún Bò? </label>
+        <section class="faq__answer">
+          <p>
+            Bún Bò is a popular Vietnamese rice noodle soup that originated from
+            the city of Huế in central Vietnam. The dish features thin rice
+            noodles (bún) in a flavorful lemongrass beef broth with tender
+            slices of beef and sometimes pork. It's known for its balance of
+            spicy, sour, sweet, and savory flavors.
+          </p>
+          <p>
+            The full name "Bún Bò Huế" refers to its city of origin, though it's
+            often shortened to just "Bún Bò" in many parts of Vietnam.
+          </p>
+        </section>
+        <div class="faq__line"></div>
+      </section>
+
+      <section class="faq__item">
+        <input type="radio" id="faq2" name="faq__accordion" />
+        <label class="faq__question" for="faq2"
+          >What are the main ingredients in Bún Bò?</label
+        >
+        <section class="faq__answer">
+          <p>The main ingredients in Bún Bò include:</p>
+          <ul class="faq__list">
+            <li>
+              <span class="ingredient">Rice noodles (bún)</span>: Round,
+              medium-thickness rice noodles
+            </li>
+            <li>
+              <span class="ingredient">Beef</span>: Usually beef shank,
+              sometimes oxtail or other cuts
+            </li>
+            <li>
+              <span class="ingredient">Pork</span>: Often includes cubes of
+              congealed pig's blood and/or pork hock
+            </li>
+            <li>
+              <span class="ingredient">Lemongrass</span>: Essential for the
+              broth's distinctive flavor
+            </li>
+            <li>
+              <span class="ingredient">Shrimp paste (mắm ruốc)</span>: Gives the
+              broth its umami depth
+            </li>
+            <li>
+              <span class="ingredient">Annatto seeds/oil</span>: Provides the
+              broth's reddish color
+            </li>
+            <li>
+              <span class="ingredient">Herbs and vegetables</span>: Bean
+              sprouts, lime, Vietnamese coriander, mint, sliced banana flower,
+              red cabbage
+            </li>
+            <li>
+              <span class="ingredient">Chili paste/oil</span>: For the signature
+              spiciness
+            </li>
+          </ul>
+        </section>
+      </section>
+
+      <section class="faq__item">
+        <input type="radio" id="faq4" name="faq__accordion" />
+        <label class="faq__question" for="faq4">Is Bún Bò spicy?</label>
+        <section class="faq__answer">
+          <p>
+            Yes, Bún Bò is traditionally spicy. The spiciness comes from both
+            chili oil or paste in the broth and from fresh chilies served as a
+            garnish. The level of spiciness can vary significantly from
+            restaurant to restaurant.
+          </p>
+          <p>
+            When ordering, you can typically request your preferred spice level.
+            In Vietnamese restaurants outside Vietnam, the dish might be served
+            milder by default, with chili sauce on the side to adjust to your
+            taste.
+          </p>
+        </section>
+      </section>
+
+      <section class="faq__item">
+        <input type="radio" id="faq5" name="faq__accordion" />
+        <label class="faq__question" for="faq5"
+          >What is the best way to eat Bún Bò?</label
+        >
+        <section class="faq__answer">
+          <p>To enjoy Bún Bò the traditional way:</p>
+          <ol class="faq__list">
+            <li>
+              Add fresh herbs, bean sprouts, and lime juice to your bowl
+              according to taste
+            </li>
+            <li>Mix in some chili sauce or oil if you want it spicier</li>
+            <li>
+              Try to get a bit of everything in each bite - noodles, meat, and
+              herbs
+            </li>
+          </ol>
+          <p>
+            Some people prefer to add fish sauce or hoisin sauce, though purists
+            might consider this unnecessary as the broth is already very
+            flavorful.
+          </p>
+        </section>
+      </section>
+    </section>
+  </body>
 </html>
