feat: expand sticky list with additional  items and improve styling in day #73

--- a/073.Implement Sticky List Titles/index.html
+++ b/073.Implement Sticky List Titles/index.html
@@ -1,19 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Day #073: Implement Sticky List Titles</title>
-  <link rel="stylesheet" href="style.css">
-      <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Day #073: Implement Sticky List Titles</title>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
       rel="stylesheet"
     />
-  
-</head>
-<body>
+  </head>
+  <body>
+    <div class="container">
+      <dl class="stack__sticky">
+        <dt>C</dt>
+        <dd>Ca Kho To (Caramelized Fish)</dd>
+        <dd>Canh Chua (Sour Soup)</dd>
+        <dd>Cao Lau (Hoi An Noodles)</dd>
+        <dd>Cha Ca (Turmeric Fish with Dill)</dd>
+        <dd>Cha Gio (Fried Spring Rolls)</dd>
+        <dd>Com Tam (Broken Rice)</dd>
 
-</body>
+        <dt>G</dt>
+        <dd>Ga Nuong (Grilled Chicken)</dd>
+        <dd>Goi Cuon (Fresh Spring Rolls)</dd>
+
+        <dt>H</dt>
+        <dd>Hu Tieu (Southern Style Noodle Soup)</dd>
+
+        <dt>L</dt>
+        <dd>Lau (Vietnamese Hot Pot)</dd>
+
+        <dt>M</dt>
+        <dd>Mi Quang (Quang Nam Noodles)</dd>
+
+        <dt>N</dt>
+        <dd>Nem Lui (Grilled Pork Skewers)</dd>
+
+        <dt>P</dt>
+        <dd>Pho (Beef Noodle Soup)</dd>
+
+        <dt>T</dt>
+        <dd>Thit Kho (Caramelized Pork)</dd>
+
+        <dt>X</dt>
+        <dd>Xoi (Sticky Rice)</dd>
+      </dl>
+    </div>
+  </body>
 </html>
