feat: done the simple usage of columns CSS by display the lyric of Vu Thanh An

--- a/077.Simple Css Long Paragraph Column/index.html
+++ b/077.Simple Css Long Paragraph Column/index.html
@@ -1,19 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Day #077: Simple Css Long Paragraph Column</title>
-  <link rel="stylesheet" href="style.css">
-      <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Day #077: Simple Css Long Paragraph Column</title>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
       rel="stylesheet"
     />
-  
-</head>
-<body>
+  </head>
+  <body>
+    <section class="content">
+      <h1>Bài không tên số 50 - Vũ Thành An</h1>
+      <p>Em bảo : Anh đi đi</p>
+      <p>Sao anh không đứng lại ?</p>
+      <p>Em bảo : Anh đừng đợi</p>
+      <p>Sao anh vội về ngay ?</p>
 
-</body>
+      <p>Lời nói thoảng gió bay</p>
+      <p>Ðôi mắt huyền đẫm lệ</p>
+      <p>Mà sao anh dại thế</p>
+      <p>Không nhìn vào mắt em</p>
+
+      <p>Mà sao anh dại thế</p>
+      <p>Không nhìn vào mắt em</p>
+      <p>Không nhìn vào mắt sầu</p>
+      <p>Không nhìn vào mắt sâu ?</p>
+    </section>
+  </body>
 </html>
