refactor: update HTML structure and CSS styles for input component

--- a/078.Simple Input With Prefix/index.html
+++ b/078.Simple Input With Prefix/index.html
@@ -17,9 +17,9 @@
 <section class="input--container">
   <span class="input--prefix">https://</span>
   <input placeholder="site.com.vn" />
-  <span class="input--icon">
+  <p class="input--icon">
     &#127760;
-  </span>
+  </p>
 </section>
 
 </body>
