feat(Day#79): done the scroll snap with list of vietnamese cuisine

--- a/079.Vertical Scroll Snap/index.html
+++ b/079.Vertical Scroll Snap/index.html
@@ -1,19 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Day #079: Vertical Scroll Snap</title>
-  <link rel="stylesheet" href="style.css">
-      <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Day #079: Vertical Scroll Snap</title>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
       rel="stylesheet"
     />
-  
-</head>
-<body>
-
-</body>
+  </head>
+  <body>
+    <div class="scroll--gallery">
+      <a class="scroll--gallery__item" href="#"
+        ><img src="https://images.unsplash.com/photo-1597345637412-9fd611e758f3?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Bun Bo"
+      /></a>
+      <a class="scroll--gallery__item" href="#"
+        ><img src="https://images.unsplash.com/photo-1594020292985-216a72a2c7ce?q=80&w=2081&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Goi Cuon"
+      /></a>
+      <a class="scroll--gallery__item" href="#"
+        ><img src="https://images.unsplash.com/photo-1582878826629-29b7ad1cdc43?q=80&w=1974&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Pho"
+      /></a>
+      <a class="scroll--gallery__item" href="#"
+        ><img src="https://images.unsplash.com/photo-1509072619873-adb3dc289b50?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Mi Quang"
+      /></a>
+      <a class="scroll--gallery__item" href="#"
+        ><img src="https://images.unsplash.com/photo-1583579366799-7106fb626a54?q=80&w=1974&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Banh Xeo"
+      /></a>
+      <a class="scroll--gallery__item" href="#"
+        ><img src="https://images.unsplash.com/photo-1622087250491-abc53e8a4439?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Banh Can"
+      /></a>
+      <a class="scroll--gallery__item" href="#"
+        ><img src="https://images.unsplash.com/photo-1701480254009-53c2bf8a82ee?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Bun Thit Nuong"
+      /></a>
+      <a class="scroll--gallery__item" href="#"
+        ><img src="https://images.unsplash.com/photo-1653222561651-aac8a71a7569?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NDZ8fHZpZXRuYW1lc2UlMjBmb29kfGVufDB8MHwwfHx8MA%3D%3D" alt="Banh Trang"
+      /></a>
+      <a class="scroll--gallery__item" href="#"
+        ><img src="https://images.unsplash.com/photo-1606732224404-9cb2126fe074?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Ca Phe"
+      /></a>
+    </div>
+  </body>
 </html>
