feat(day #80): add rating scale component with updated styles and structure

--- a/080.Rating Scale Feedback/index.html
+++ b/080.Rating Scale Feedback/index.html
@@ -13,7 +13,7 @@
     />
   </head>
   <body>
-    <div class="rating-component">
+    <section class="rating-component">
       <form class="rating-component__form">
         <label class="rating-component__label">
           <input
@@ -58,6 +58,6 @@
           </svg>
         </label>
       </form>
-    </div>
+    </section>
   </body>
 </html>
