chore(day #81): remove whitespace

--- a/081.Tabs Header With Badge/index.html
+++ b/081.Tabs Header With Badge/index.html
@@ -17,7 +17,7 @@
 <section class="tabs-selector">
     <div class="tabs-selector__container">
       <input class="tabs-selector__input" checked name="tabs" id="tab-weekly" type="radio">
-      <label class="tabs-selector__label" for="tab-weekly">Weekly</label>
+      <label class="tabs-selector__label" for="tab-weekly">weekly</label>
 
       <input class="tabs-selector__input" name="tabs" id="tab-monthly" type="radio">
       <label class="tabs-selector__label" for="tab-monthly">
