fix(day#81): correct label capitalization and adjust whitespace in tabs header

--- a/081.Tabs Header With Badge/index.html
+++ b/081.Tabs Header With Badge/index.html
@@ -14,10 +14,10 @@
 
 </head>
 <body>
-<section class="tabs-selector">
+ <section class="tabs-selector">
     <div class="tabs-selector__container">
       <input class="tabs-selector__input" checked name="tabs" id="tab-weekly" type="radio">
-      <label class="tabs-selector__label" for="tab-weekly">weekly</label>
+      <label class="tabs-selector__label" for="tab-weekly">Weekly</label>
 
       <input class="tabs-selector__input" name="tabs" id="tab-monthly" type="radio">
       <label class="tabs-selector__label" for="tab-monthly">
@@ -30,8 +30,6 @@
         Yearly
         <span class="tabs-selector__notification">SAVE 55%</span>
       </label>
-
-      <span class="tabs-selector__slider"></span>
     </div>
   </section>
 </body>
