--- a/083.Sticky Sidebar Section/index.html
+++ b/083.Sticky Sidebar Section/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Day #083: Sticky Sidebar Section</title>
+  <title>Day #083: Sticky Sidebar</title>
   <link rel="stylesheet" href="style.css">
       <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -11,7 +11,7 @@
       href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
       rel="stylesheet"
     />
-  
+
 </head>
 <body>
 
