feat(day #83): add image and additional details to the Sticky Sidebar section

--- a/083.Sticky Sidebar Section/index.html
+++ b/083.Sticky Sidebar Section/index.html
@@ -17,7 +17,8 @@
     <main>
       <aside>
         <h3>Bài Ca Đất Phương Nam</h3>
-
+        <p>Tô Thanh Phương - 2015</p>
+        <img src="images.png" alt="Dat Phuong Nam">
       </aside>
 
       <article>
@@ -72,22 +73,6 @@
           Dẫu trải qua thăng trầm giông tố<br />
           Qua bao cuộc bể dâu mãi dâng cho đời<br />
           Bài tình ca đất phương Nam.
-        </p>
-        <p>
-          Chờ trăng lên cất tiếng gọi nhau<br />
-          Đờn khảy tang tình đượm thắm hồn ai<br />
-          Biển xôn xao gió lộng tứ bề<br />
-          Thuyền ai xuôi phương Nam khoan nhặt trôi lững lờ<br />
-          Đã trải qua bao mùa mưa nắng, qua bao cuộc đổi thay<br />
-          Mãi dâng cho đời bài tình ca đất phương Nam.
-        </p>
-        <p>
-          Cánh chim tung trời về đất phương Nam<br />
-          Người xưa lưu dấu in hình thuở mang gươm<br />
-          Bao la tình đời, màu lục bình trôi.<br />
-          Hoàng hôn tím ven sông, tiếng hò khoan còn tỏa đôi bờ<br />
-          Lênh đênh mây trôi, khói sương chiều miên man nỗi nhớ<br />
-          Nghe trong âm ba từng con sóng vỗ về.
         </p>
       </article>
     </main>
